--- a/src/main/resources/templates/admin/layouts/index.html
+++ b/src/main/resources/templates/admin/layouts/index.html
@@ -24,6 +24,7 @@
     <link th:href="@{/admin/css/tooltip.min.css}" rel="stylesheet">
     <link th:href="@{/admin/css/virtual-select.min.css}" rel="stylesheet">
     <link th:href="@{/admin/css/bootstrap-select.min.css}" rel="stylesheet" />
+    
 
     <!-- img Libr -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
@@ -139,11 +140,11 @@
 <script th:src="@{/admin/js/sweet-alert.min.js}"></script>
 <script th:src="@{/admin/js/jquery.validation.min.js}"></script>
 
-<script th:src="@{/admin/js/product/product.js}"></script>
-<script th:src="@{/admin/js/hoaDon/HoaDon.js}"></script>
-<script th:src="@{/admin/js/khuyenmai/khuyenmai.js}"></script>
-<script th:src="@{/admin/js/khachhang/khachHang.js}"></script>
-<script th:src="@{/admin/js/diachi/diaChi.js}"></script>
+<script type="text/javascript" th:src="@{/admin/js/product/product.js}"></script>
+<script type="text/javascript" th:src="@{/admin/js/hoaDon/HoaDon.js}"></script>
+<script type="text/javascript" th:src="@{/admin/js/khuyenmai/khuyenmai.js}"></script>
+<script type="text/javascript" th:src="@{/admin/js/khachhang/khachHang.js}"></script>
+<script type="text/javascript" th:src="@{/admin/js/diachi/diaChi.js}"></script>
 </body>
 
 </html>
