--- a/src/main/resources/templates/admin/banHang/banHangTaiQuay/DanhSach.html
+++ b/src/main/resources/templates/admin/banHang/banHangTaiQuay/DanhSach.html
@@ -46,7 +46,7 @@
             <tr th:each="hoaDonTaiQuay, stt: ${danhSachBanHang}">
                 <td th:text="${(page - 1) * size + stt.count}"></td>
                 <td th:text="${hoaDonTaiQuay.maDon}"></td>
-                <td th:text="${hoaDonTaiQuay.hoaDonChiTiets.size()}"></td>
+                <td th:text="${hoaDonTaiQuay.hoaDonChiTiets.?[daXoa == false].size()}"></td>
                 <td th:text="${#numbers.formatDecimal(hoaDonTaiQuay.tongTienHoaDon, 0, 'COMMA', 0, 'POINT')} + ' VNĐ'"></td>
                 <td th:text="${#dates.format(hoaDonTaiQuay.ngayTao, 'dd/MM/yyyy')}"></td>
                 <td th:text="${hoaDonTaiQuay.trangThai.name}"></td>
