--- a/src/main/resources/templates/admin/product/infoProduct.html
+++ b/src/main/resources/templates/admin/product/infoProduct.html
@@ -111,9 +111,9 @@
                     </h6>
                     <div class="btn-group-sm">
                         <div class="float-right">
-                            <a class="btn btn-primary mr-sm-1" th:href="@{/admin/product/add}">Thêm
-                                mới</a>
-                            <a class="btn btn-danger" onclick="showConfirmModalDialogDeleteAllbyId()">Xóa</a>
+                            <a class="btn btn-primary mr-sm-1 text-light" th:href="@{/admin/product/add}">Thêm
+                                mới sản phẩm tương tự</a>
+                            <a class="btn btn-danger text-light" onclick="showConfirmModalDialogDeleteAllbyId()">Xóa</a>
                         </div>
                     </div>
                 </div>
