--- a/src/main/resources/templates/admin/banHang/banHangTaiQuay/banHang.html
+++ b/src/main/resources/templates/admin/banHang/banHangTaiQuay/banHang.html
@@ -333,6 +333,7 @@
                                             </thead>
                                             <tbody class="text-center" th:object="${resultSP}">
                                                 <input type="hidden" th:field="*{hoaDonId}">
+                                                <input type="hidden" th:field="*{soLuong}">
                                                 <tr th:each="item, istat : ${resultSP.lstShowSanPhamTaiQuayDTO}">
                                                     <td
                                                         th:text="${sanPhamPage.number * sanPhamPage.size + istat.index + 1}">
@@ -477,6 +478,15 @@
                                                                                     </label>
                                                                                 </div>
                                                                             </div>
+                                                                            <div class="col-lg-12">
+                                                                                <div class="form-group">
+                                                                                  <label for="soLuongId">Số lượng:</label>
+                                                                                  <input type="number" class="form-control" 
+                                                                                  th:name="inputSLName" oninput="getSoLuongInput(this.getAttribute('id'), this.getAttribute('inputSLName'))"
+                                                                                  th:id="'soLuongInputId'+${istat.index}"
+                                                                                  placeholder="Số lượng">
+                                                                                </div>
+                                                                            </div>
                                                                         </div>
                                                                     </div>
                                                                 </div>
@@ -490,7 +500,7 @@
                                                                     this.getAttribute('label-name1'), this.getAttribute('label-name2'))"
                                                                         data-dismiss="modal">Đóng</a>
                                                                     <a class="btn btn-outline-primary"
-                                                                        onclick="flexUrlSubmitBanHangTaiQuay('/banHang/getData', 'post', 'BanHangTaiQuay')">Thêm
+                                                                        onclick="flexUrlSubmitBanHangTaiQuay('/banHang/hoaDonChiTiet', 'post', 'BanHangTaiQuay')">Thêm
                                                                         sản phẩm</a>
                                                                 </div>
                                                             </div>
@@ -624,6 +634,13 @@
                 var lstSPName = document.getElementsByName(spName);
                 $(lstInputName).removeAttr("checked");
                 $('#' + spId).attr("checked", "true");
+            }
+            function getSoLuongInput(id, name){
+                var valueSoLuongName = document.getElementsByName(id);
+                $(valueSoLuongName).val(0);
+                var valueSoLuongId = document.getElementById(id).value;
+                var soLuong = document.getElementsByName('soLuong');
+                $(soLuong).val(valueSoLuongId);
             }
         </script>
         <script th:inline="javascript">
