--- a/src/main/resources/templates/admin/product/productManage.html
+++ b/src/main/resources/templates/admin/product/productManage.html
@@ -201,7 +201,7 @@
                         </div>
                         <div class="col-sm-12 mt-3">
                             <div class="float-right">
-                                <a class="btn btn-primary" onclick="flexUrlSubmit('', 'get', 'ProductManage')">Tìm
+                                <a class="btn btn-primary text-light" onclick="flexUrlSubmit('', 'get', 'ProductManage')">Tìm
                                     kiếm</a>
                             </div>
                         </div>
@@ -211,12 +211,12 @@
                 <!-- DataTales Example -->
                 <div class="card shadow mb-4 mt-4">
                     <div class="card-header py-3">
-                        <h6 class="m-0 font-weight-bold text-primary">
+                        <h6 class="m-0 font-weight-bold">
                             <div class="btn-group-sm">
                                 <div class="float-right">
-                                    <a class="btn btn-primary mr-sm-1" th:href="@{/admin/product/add}">Thêm
+                                    <a class="btn btn-primary mr-sm-1 text-light" th:href="@{/admin/product/add}">Thêm
                                         mới</a>
-                                    <a class="btn btn-danger" onclick="showConfirmModalDialogDeleteAllbyId()">Xóa</a>
+                                    <a class="btn btn-danger text-light" onclick="showConfirmModalDialogDeleteAllbyId()">Xóa</a>
                                 </div>
                             </div>
                         </h6>
@@ -418,7 +418,7 @@
                     </div>
                     <div class="modal-footer">
                         <a type="button" class="btn btn-outline-dark" data-dismiss="modal">Đóng</a>
-                        <a id="yesOptionDeleteModalId" type="button" class="btn btn-danger">Xóa</a>
+                        <a id="yesOptionDeleteModalId" type="button" class="btn btn-danger text-light">Xóa</a>
                     </div>
                 </div>
             </div>
@@ -463,7 +463,7 @@
                     <div class="modal-footer">
                         <a type="button" class="btn btn-outline-dark" data-dismiss="modal">Đóng</a>
                         <a onclick="flexUrlSubmit('deleteAllByIdsProductManage', 'post', 'ProductManage')" type="button"
-                            class="btn btn-danger">Xóa</a>
+                            class="btn btn-danger text-light">Xóa</a>
                     </div>
                 </div>
             </div>
